<resources>
    <string name="app_name" translatable="false">FoodApp</string>
    <string name="welcome_screen_subtitle">Join Us</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="already_signup">Already Signup?</string>
    <string name="signin">Sign In</string>
    <string name="username_or_email">Username | email</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="foods">Foods</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="favorite_foods">Favorite Foods</string>
    <string name="balance">Balance:</string>
    <string name="currency_value">{Currency}</string>
    <string name="balance_value">{Balance}</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="cart">Cart</string>
    <string name="back_arrow">Back arrow</string>
    <string name="total">Total:</string>
    <string name="price_value">{Price}</string>
    <string name="go_to_payment">Go to payment</string>
    <string name="app_name_and_version" translatable="false">Food App v1.0.0</string>
    <string name="developed_by_luca_r">Developed by Luca R. Website: www.example.com Email: contact@example.com</string>
    <string name="app_description">Explore Culinary Adventures, Anytime, Anywhere with FoodApp: Your Gourmet Companion.</string>
    <string name="category_image">category image</string>
    <string name="category_name">{Category\'s Name}</string>
    <string name="favorite_foods_image">favorite foods image</string>
    <string name="add_item">add item</string>
    <string name="remove_item">remove item</string>
    <string name="food_details_image">food details image</string>
    <string name="favorite_image">favorite image</string>
    <string name="foods_image">foods image</string>
    <string name="background_image">background image</string>
    <string name="food_name">{Food name}</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="ingredients_description">{Ingredients Description}</string>
    <string name="quantity_value">{Quantity}</string>
    <string name="dollar_sign">$</string>
    <string name="cart_item_image">cart item image</string>
    <string name="category_item_image">category item image</string>
    <string name="quantity">Quantity:</string>
    <string name="favorite_foods_item_image">favorite foods item image</string>
    <string name="category">Category:</string>
    <string name="category_value">{Category}</string>
    <string name="food_item_image">food item image</string>
    <string name="foods_item_image">foods item image</string>
    <string name="menu">menu</string>
    <string name="cart_image">cart image</string>
    <string name="search_icon">search icon</string>
    <string name="category_poke_image">category poke image</string>
    <string name="category_fruit_image">category fruit image</string>
    <string name="category_vegetables_image">category vegetables image</string>
    <string name="category_salad_image">category salad image</string>
    <string name="poke">Poké</string>
    <string name="fruit">Fruit</string>
    <string name="vegetables">Vegetables</string>
    <string name="salad">Salad</string>
    <string name="hi">Hi</string>
    <string name="categories">Categories</string>
    <string name="your_recommended">Your recommended</string>
    <string name="your_favorites">Your favorites</string>
    <string name="username_value">{Username}</string>
    <string name="dark_theme_preference">Enable or disable the dark theme</string>
    <string name="app_version" translatable="false">1.0.0</string>
</resources>