<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="General">
        <SwitchPreference
            android:key="theme_preference"
            android:title="Dark Theme"
            android:defaultValue="false"
            android:summary="@string/dark_theme_preference"/>
        <!-- <Preference
            android:key="import_preference"
            android:summary="Import Database"
            android:title="Import " />
        <Preference
            android:key="export_preference"
            android:summary="Export Database"
            android:title="Export"/> --> <!-- TODO: uncomment/remove -->
    </PreferenceCategory>
    <PreferenceCategory
        android:title="About">
        <Preference
            android:key="privacy_preference"
            android:title="Privacy"
            android:summary="@string/privacy_policy"/>
        <Preference
            android:key="terms_preference"
            android:title="Terms"
            android:summary="@string/terms_and_conditions"/>
        <Preference
            android:title="Version"
            android:summary="@string/app_version"
            android:selectable="false"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>