<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <!-- TODO: LinearLayout -->
    <!-- TODO: layout_gravity -->

    <!-- TODO: android:foreground="@drawable/ic_foreground" magari per il dark theme -->
    <!-- TODO: vedere se cambiare l'immagine di welcome screen -->
    <ImageView
        android:id="@+id/welcome_screen_imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:src="@drawable/ic_healthy_food_welcome_screen_background1"/>

    <!-- TODO: text color: white, textSize: 33sp o 48dp o 18pt -->
    <!-- TODO: cambiare la font-family del testo. -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias=".4"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcome_screen_imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TODO: text color: white, cambiare il testo da "Sottotitolo" ad altro. -->
    <!-- TODO: cambiare la font-family del testo. -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/welcome_screen_subtitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- TODO: usare <androidx.appcompat.widget.AppCompatButton ? -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_button_background"
        android:padding="15dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:backgroundTint="@color/custom_red"
        app:layout_constraintBottom_toBottomOf="@+id/welcome_screen_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.706"
        app:layout_constraintWidth_percent=".9" />

    <!-- TODO: Non hai un account? Signup oppure lasciare così. -->

    <TextView
        android:id="@+id/signup_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>